--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -213,7 +213,7 @@ a:visited {
   font-size: 14px;
 }
 
-.checkbox-progress2 .govuk-checkboxes__item {
+.checkbox2 .govuk-checkboxes__item {
   clear: none;
   width: 33%;
 }
