--- a/app/views/index.html
+++ b/app/views/index.html
@@ -210,13 +210,12 @@ for (i = 0; i < coll.length; i++) {
 
 
 <br>
-<a href="sessiononeA.html">
-Session one A
+<a href="sessiononed.html">
+Start prototype </a>
 
 <br>
 <br>
-<a href="sessiononeB.html">
-Session one B
+
 
 <hr style="color: lightgrey; ">
 
