--- a/app/views/index.html
+++ b/app/views/index.html
@@ -210,7 +210,7 @@ for (i = 0; i < coll.length; i++) {
 
 
 <br>
-<a href="sessiononed.html">
+<a href="sessionone.html">
 Start prototype </a>
 
 <br>
