--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -56,7 +56,7 @@ $govuk-page-width: 1200px;
 
 
 #search-button {
-  width: 100px;;
+  width: 100px;
   height: 40px;
   background-color:  rgba(0,112,60, 0.9);
   color: white;
@@ -64,9 +64,8 @@ $govuk-page-width: 1200px;
   border-color: #00703c;
   border-radius: 3px;
   font-size: 17px;
-  float: left;
   margin-top: 10px;
-  
+
 
 
 
@@ -81,7 +80,6 @@ $govuk-page-width: 1200px;
   color: white;
   border-radius: 3px;
   font-size: 17px;
-  float: left;
   margin-top: 10px;
 
 }
@@ -224,12 +222,12 @@ a:visited {
 
 .checkbox2 .govuk-checkboxes__item {
   clear: none;
-  width: 35%;
+  width: 100%;
 }
 
 .checkbox3 .govuk-checkboxes__item {
   clear: none;
-  width: 25%;
+  width: 60%;
 }
 
 .expandy-row-trigger2 {
